Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,10 @@
 <h1>Make your form here</h1>
+<form action="/pirates" method="post">
+  <h2>Pirate</h2>
+  <label for="pirate_name">Name</label><br>
+  <input type="text" id="pirate_name" name="pirate[name]"><br>
+  <label for="pirate_weight">Name</label><br>
+  <input type="text" id="pirate_weight" name="pirate[weight]"><br>
+  <label for="pirate_height">Name</label><br>
+  <input type="text" id="pirate_height" name="pirate[height]"><br>
+</form>
