--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -3,8 +3,11 @@
   <h2>Pirate</h2>
   <label for="pirate_name">Name</label><br>
   <input type="text" id="pirate_name" name="pirate[name]"><br>
-  <label for="pirate_weight">Name</label><br>
+  <label for="pirate_weight">Weight</label><br>
   <input type="text" id="pirate_weight" name="pirate[weight]"><br>
-  <label for="pirate_height">Name</label><br>
+  <label for="pirate_height">Height</label><br>
   <input type="text" id="pirate_height" name="pirate[height]"><br>
+
+  <h2>Ships</h2>
+  <label for="ship_name_1">Name</label>
 </form>
