Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -9,5 +9,10 @@
   <input type="text" id="pirate_height" name="pirate[height]"><br>
 
   <h2>Ships</h2>
-  <label for="ship_name_1">Name</label>
+  <label for="ship_name_1">Name</label><br>
+  <input type="text" id="ship_name_1" name="pirate[ships][][name]"><br>
+  <label for="ship_type_1">Type</label><br>
+  <input type="text" id="ship_type_1" name="pirate[ships][][type]"><br>
+  <label for="ship_booty_1">Booty</label><br>
+  <input type="text" id="ship_booty_1" name="pirate[ships][][booty]"><br>
 </form>
