Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -15,4 +15,10 @@
   <input type="text" id="ship_type_1" name="pirate[ships][][type]"><br>
   <label for="ship_booty_1">Booty</label><br>
   <input type="text" id="ship_booty_1" name="pirate[ships][][booty]"><br>
+  <label for="ship_name_2">Name</label><br>
+  <input type="text" id="ship_name_2" name="pirate[ships][][name]"><br>
+  <label for="ship_type_2">Type</label><br>
+  <input type="text" id="ship_type_2" name="pirate[ships][][type]"><br>
+  <label for="ship_booty_2">Booty</label><br>
+  <input type="text" id="ship_booty_2" name="pirate[ships][][booty]"><br>
 </form>
