Automatically backed up by Learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,5 +1,11 @@
 <h1>Display your Pirate here</h1>
 
+<div class="pirate">
+  <h3>Name: <%= @pirate.name %></h3><br>
+  <h4>Weight: <%= @pirate.weight %> pounds</h4><br>
+  <h4>Height: <%= @pirate.height %> inches</h4><br>
+  
+</div>
 
 <h2>Display your first ship here</h2>
 
