--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -8,6 +8,12 @@
 </div>
 
 <h2>Display your first ship here</h2>
-
+<% @ships.each do |ship| %>
+<div class="ship">
+  <p>Name: <%= ship.name %></p><br>
+  <p>Type: <%= ship.type %></p><br>
+  <p>Booty: <%= ship.booty %></p>
+</div><br>
+<% end %>
 
 <h2>Display your second ship here</h2>
