Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -21,4 +21,5 @@
   <input type="text" id="ship_type_2" name="pirate[ships][][type]"><br>
   <label for="ship_booty_2">Booty</label><br>
   <input type="text" id="ship_booty_2" name="pirate[ships][][booty]"><br>
+  <input type="submit" value="Submit">
 </form>
