--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,25 @@
 <h1>Make your form here</h1>
+<form action="/pirates" method="post">
+  <h2>Pirate</h2>
+  <label for="pirate_name">Name</label><br>
+  <input type="text" id="pirate_name" name="pirate[name]"><br>
+  <label for="pirate_weight">Weight</label><br>
+  <input type="text" id="pirate_weight" name="pirate[weight]"><br>
+  <label for="pirate_height">Height</label><br>
+  <input type="text" id="pirate_height" name="pirate[height]"><br>
+
+  <h2>Ships</h2>
+  <label for="ship_name_1">Name</label><br>
+  <input type="text" id="ship_name_1" name="pirate[ships][][name]"><br>
+  <label for="ship_type_1">Type</label><br>
+  <input type="text" id="ship_type_1" name="pirate[ships][][type]"><br>
+  <label for="ship_booty_1">Booty</label><br>
+  <input type="text" id="ship_booty_1" name="pirate[ships][][booty]"><br>
+  <label for="ship_name_2">Name</label><br>
+  <input type="text" id="ship_name_2" name="pirate[ships][][name]"><br>
+  <label for="ship_type_2">Type</label><br>
+  <input type="text" id="ship_type_2" name="pirate[ships][][type]"><br>
+  <label for="ship_booty_2">Booty</label><br>
+  <input type="text" id="ship_booty_2" name="pirate[ships][][booty]"><br>
+  <input type="submit" value="Submit">
+</form>
